tests/typecheck/fail/interpolation_wrong_to_string_arity.tw
type User = .{ name: String }

fn to_string(u: User, prefix: String) String {
    prefix.concat(u.name)
}

fn render_user() String {
    u := User.{ name: "Ada" }
    "${u}"
}
